# app/Models/Admin/Admin.php
@@ -1,0 +1,34 @@
+<?php
+
+namespace App\Models\Admin;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Foundation\Auth\User as Authenticatable;
+use Illuminate\Notifications\Notifiable;
+// use Laravel\Sanctum\HasApiTokens;
+use Laravel\Passport\HasApiTokens;
+
+class Admin extends Model
+{
+    use HasApiTokens, HasFactory, Notifiable;
+    protected $table = 'admin_user';
+    protected $fillable = [
+        'name',
+        'login',
+        'role',
+        'password',
+    ];
+
+
+
+    protected $hidden = [
+        'password',
+        'remember_token',
+    ];
+
+
+    protected $casts = [
+        'email_verified_at' => 'datetime',
+    ];
+}
